Fix project tabs links display on mobile.

--- a/app/modules/projects/components/ProjectTabs/styles.scss
+++ b/app/modules/projects/components/ProjectTabs/styles.scss
@@ -16,6 +16,7 @@
     background: #fff;
     border: 1px get-color(blue) solid;
     display: flex;
+    flex-wrap: wrap;
     font-size: 2rem;
     justify-content: center;
     list-style: none;
@@ -42,18 +43,17 @@
     }
 
     li {
+      margin-bottom: 10px;
       margin-right: 25px;
 
       &:last-child {
         margin-right: 0;
+        margin-bottom: 0;
       }
 
       @include breakpoint(desktop) {
         margin-bottom: 15px;
 
-        &:last-child {
-          margin-bottom: 0;
-        }
       }
     }
   }
